Add initial org-mode settings.
- Quote to sharp quotes for functions.
- Add new keybindings for windmove

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,16 @@
+anaconda-mode
 auto-save-list
 elpa
 eshell
-anaconda-mode
-session*
+irony
+request
+url
+
 recentf
 projectile*
 semanticdb
+session*
 snippets
 *.dat
+
+private_settings.el
